# Algorit2

./: C.cpp  CMakeLists.txt  From.py  TextJustifier.java  align.py  english_input.txt  hunspell.cpp  justification.cpp  justification_algs.py  justification_hyphenated.cpp  justify_with_pyphen.py  main.py  main_runner.py  mongolian_input.txt  python.py  reader.py  test_data.py
